<resources>
    <string name="app_name">Recipe Search DEMO</string>
    <string name="search_your_recipes">search your recipes...</string>
    <string name="img_of_recipe">img of recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="ready_in">Ready In</string>
    <string name="servings">Servings</string>
    <string name="default_servings_value">0</string>
    <string name="ready_in_min_img">ready in min img</string>
    <string name="img_des">img_des</string>
    <string name="main_picture">main picture</string>
    <string name="logo">logo</string>
    <string name="ingredient_image">ingredient image</string>
    <string name="item_name">Item Name</string>
    <string name="the_search_results_for">The Search Results For:</string>
    <string name="ingredients_list">Ingredients List</string>
    <string name="search">search</string>
    <string name="_000">000</string>
    <string name="mins">mins</string>
    <string name="health">health</string>
    <string name="not_healthy">Not Healthy</string>
    <string name="ingridients">Ingridients</string>
    <string name="instructions">Instructions</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="home">Home</string>
    <string name="no_results_found">No results found</string>

</resources>
