<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".Recipe_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipe_img"
                android:layout_width="616dp"
                android:layout_height="287dp"
                android:contentDescription="@+id/recipe_img"
                app:srcCompat="@color/common_google_signin_btn_text_light_pressed" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:clickable="false"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="#000"
                        android:id="@+id/recipe_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="55dp"
                        android:text="@string/recipe_title"
                        android:textStyle="bold" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textSize="12sp"
                            android:id="@+id/imageView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:textColor="#f00"
                            android:layout_marginTop="20dp"
                            android:text="Time:"
                            android:layout_marginBottom="20dp"
                            android:contentDescription="@string/ready_in_min_img"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.166" />

                        <TextView
                            android:textSize="12sp"
                            android:id="@+id/recipe_ready_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/_000"
                            android:textColor="#000"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView7"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:textSize="12sp"
                            android:textColor="#000"
                            android:id="@+id/textView32"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/mins"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/recipe_ready_in"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:textSize="12sp"
                            android:id="@+id/imageView8"
                            android:text="Serving:"
                            android:textColor="#f00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:contentDescription="@string/servings"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textView32"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:textSize="12sp"
                            android:textColor="#000"
                            android:id="@+id/recipe_servings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/_000"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView8"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/imageView9"
                            android:text="Healty/Not:"
                            android:textColor="#f00"
                            android:textSize="12sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:contentDescription="@string/health"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/recipe_servings"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:textSize="12sp"
                            android:textColor="#000"
                            android:id="@+id/recipe_healthy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/not_healthy"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView9"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textView37"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/ingridients"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recipe_ingredients_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView39"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/instructions"
                        android:textSize="18sp"
                        android:textColor="#000"
                        android:textStyle="bold" />

                    <TextView
                        android:textColor="#000"
                        android:textSize="12sp"
                        android:id="@+id/recipe_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>